syntax = "proto3";

import "graph_schema.proto";

option java_package = "org.neo4j.graphalgo.core.model.proto";
option java_outer_classname = "ModelProto";


message ModelMetaData {
  string username = 1;
  string name = 2;
  string algoType = 3;
  GraphSchema graphSchema = 4;
  ZonedDateTime creationTime = 6;
}

message ZonedDateTime {
  int64 seconds = 1;
  int32 nanos = 2;
  string zoneId = 3;
}
